--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>13</java.version>
         <javaMelody.version>1.69.0</javaMelody.version>
-        <swagger.version>2.7.0</swagger.version>
+        <swagger.version>2.8.0</swagger.version>
         <postgresql.version>42.2.2</postgresql.version>
         <fastjson.version>1.2.24</fastjson.version>
         <commons-lang3.version>3.0</commons-lang3.version>
@@ -53,6 +53,11 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
         </dependency>
         <dependency>
