new auth with redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:eg0skiz0}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 image.path=/app/images/
-token.expiration.time=1
+access.token.ttl=1
 
 javamelody.enabled=true
 javamelody.spring-monitoring-enabled=true
