send push notify after adding event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ javamelody.scheduled-monitoring-enabled=true
 
 spring.jackson.default-property-inclusion = NON_NULL
 
+firebase.account.file=/Users/iesoveev/IdeaProjects/wrf-backend-java/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json
+
