add checklists and jpa repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/w
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:eg0skiz0}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=update
+hibernate.connection.pool_size=5
+hibernate.jdbc.fetch_size=350
+hibernate.jdbc.batch_size=100
+hibernate.connection.release_mode=on_close
 
 onboarding.image.path=/app/images/onboarding/
 innovation.image.path=/app/images/innovations/
@@ -20,4 +27,5 @@ javamelody.scheduled-monitoring-enabled=true
 spring.jackson.default-property-inclusion = NON_NULL
 
 firebase.account.file=/app/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json
+
 
