--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.jackson.default-property-inclusion = NON_NULL
 firebase.account.file=/app/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json
 
 
+logstash.host=localhost:5000
+app.name=wrf-backend
+
