Switched @Id type to Long. Added half of the tests on Controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,5 @@ firebase.account.file=/app/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json
 logstash.host=localhost:5000
 app.name=wrf-backend
 
+base.url=${BASE_URL:http://localhost:8080/}
+
