--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ javamelody.scheduled-monitoring-enabled=true
 
 spring.jackson.default-property-inclusion = NON_NULL
 
-firebase.account.file=/app/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json
+firebase.account.file=${FIREBASE_CONFIG_FILE:/Users/iesoveev/IdeaProjects/wrf-microservices/wrf-backend-java/wrf-backend-firebase-adminsdk-sql35-3ec4183b33.json}
 
 
 logstash.host=localhost:5000
