--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:eg0skiz0}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.connection.pool_size=5
 hibernate.jdbc.fetch_size=350
 hibernate.jdbc.batch_size=100
