added minio cloud server for images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,9 @@ app.name=wrf-backend
 
 base.url=${BASE_URL:http://localhost:8080/}
 
+minio.server=https://play.min.io
+minio.access.key=Q3AM3UQ867SPQQA43P2F
+minio.secret.key=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
+minio.innovation.bucket=innovations
+minio.onboarding.bucket=onboarding
+
