--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <jackson.version>2.9.3</jackson.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <lombok.version>1.18.10</lombok.version>
+        <minio.version>6.0.13</minio.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
     </properties>
 
@@ -110,6 +111,12 @@
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
